# dialstyles

./: CMakeLists.txt  ClassicStyle.cpp  ClassicStyle.h  PeppinoStyle.cpp  PeppinoStyle.h  README.md  SkulptureStyle.cpp  SkulptureStyle.h  VokiStyle.cpp  VokiStyle.h  dialstyles.cpp  dialstyles.h  dialstyles.pro  dialstyles.ui  main.cpp
